--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
     <button class="paper">Paper</button>
     <button class="scissors">Scissors</button>
 
+    <div class="overallResults">
+        <div class="comChoice"></div>
+        <div class="roundResults"></div>
+        <div class="scores"></div>
+    </div>
+
     <script src="./script.js"></script>
 </body>
 </html>
